# fantasy-baseball-advisor

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .env.example  my_roster.yaml  unavailable_players.yaml
src/: app.py  recommender.py
src/analysis/: __init__.py  metrics.py
src/data/: __init__.py  statcast_client.py
src/fantasy_baseball_advisor/: __init__.py  __main__.py  cli.py
src/roster/: __init__.py  manager.py
tests/: test_metrics.py  test_recommender.py
