[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fantasy-baseball-advisor"
version = "0.1.0"
description = "CLI and web app for fantasy baseball analysis using Statcast data"
requires-python = ">=3.11"
dependencies = [
    "pybaseball>=2.2.7",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.35.0",
]

[project.scripts]
fba = "fantasy_baseball_advisor.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
